--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -14,6 +14,7 @@
         android:background="@color/colorAccent"
         android:paddingStart="52dp"
         android:paddingTop="10dp"
+        android:elevation="2dp"
         android:text="@string/profile"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="35sp"
@@ -26,6 +27,7 @@
         android:id="@+id/back_arrow4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="2dp"
         android:backgroundTint="@color/colorAccent"
         android:src="@drawable/ic_back_en"
         app:layout_constraintBottom_toBottomOf="@id/pr_title"
@@ -35,15 +37,17 @@
 
 
     <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/scrl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="@dimen/loginViewsMargin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/pr_title"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/pr_title">
+
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <androidx.constraintlayout.widget.Guideline
@@ -56,8 +60,8 @@
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/v_guideline2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintGuide_end="20dp" />
@@ -69,27 +73,27 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorAccent"
                 app:cardCornerRadius="20dp"
-               app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/v_ll"
                 app:layout_constraintEnd_toStartOf="@+id/v_guideline2"
                 app:layout_constraintStart_toStartOf="@+id/v_guideline">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingBottom="20dp">
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/loginViewsMargin">
 
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/v_gl"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:orientation="vertical"
                         app:layout_constraintGuide_begin="20dp" />
 
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/v_gl2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:orientation="vertical"
                         app:layout_constraintGuide_end="20dp" />
 
@@ -138,7 +142,6 @@
                         android:textColor="@color/colorPrimaryDark"
                         android:textSize="24sp"
                         android:textStyle="bold"
-
                         app:layout_constraintBottom_toTopOf="@+id/v_view2"
                         app:layout_constraintEnd_toStartOf="@id/v_gl2"
                         app:layout_constraintStart_toStartOf="@+id/v_gl"
@@ -146,14 +149,13 @@
 
                     <View
                         android:id="@+id/v_view2"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="2dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="10dp"
                         android:background="@color/colorPrimaryDark"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/v_info" />
-
 
                     <TextView
                         android:id="@+id/v_email"
@@ -276,7 +278,7 @@
                         app:layout_constraintEnd_toStartOf="@id/v_gl2"
                         app:layout_constraintStart_toStartOf="@id/v_gl"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintBaseline_toBaselineOf="@id/v_bio"/>
+                        app:layout_constraintBaseline_toBaselineOf="@id/v_bio" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
@@ -326,25 +328,35 @@
 
             <LinearLayout
                 android:id="@+id/v_ll"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:orientation="horizontal"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="@dimen/loginViewsMargin"
+                android:background="@color/colorPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/v_guideline2"
-                app:layout_constraintStart_toStartOf="@id/v_guideline"
-                app:layout_constraintTop_toBottomOf="@id/v_view">
+                app:layout_constraintStart_toStartOf="@id/v_guideline">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/v_manageparts"
                     style="@style/loginButton"
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginBottom="@dimen/loginViewsMargin"
                     android:text="@string/view_parts"
                     android:textColor="@color/colorPrimaryDark" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/v_rating"
                     style="@style/loginButton"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="@dimen/loginViewsMargin"
+                    android:layout_weight="1"
                     android:text="@string/rate_me"
                     android:textColor="@color/colorPrimaryDark" />
+
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
