--- a/app/src/main/res/layout/row_subcategories.xml
+++ b/app/src/main/res/layout/row_subcategories.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:backgroundTint="@color/colorPrimary">
     <TextView
         android:id="@+id/subcategories_name"
         android:layout_margin="20dp"
