--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -56,7 +56,7 @@
         android:layout_marginRight="10dp"
         android:backgroundTint="@color/colorPrimary"
         android:elevation="12dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:cardCornerRadius="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +105,6 @@
                     android:text="@string/make"
                     android:textColor="@color/darkTextColor"
                     android:textSize="20sp"
-
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/partsFilterText" />
 
@@ -117,7 +116,7 @@
                     android:layout_marginTop="25dp"
                     android:backgroundTint="@color/themeColor"
                     android:entries="@array/spinner"
-                    android:textAlignment="textStart"
+                    app:layout_constraintBaseline_toBaselineOf="@id/partsMakeText"
                     app:layout_constraintBottom_toTopOf="@id/partsModelSpinner"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/partsMakeText"
@@ -143,7 +142,7 @@
                     android:layout_marginTop="25dp"
                     android:backgroundTint="@color/themeColor"
                     android:entries="@array/spinner"
-                    android:textAlignment="textStart"
+                    app:layout_constraintBaseline_toBaselineOf="@id/partsModelText"
                     app:layout_constraintBottom_toTopOf="@id/partsYearSpinner"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/partsModelText"
@@ -169,7 +168,7 @@
                     android:layout_marginTop="25dp"
                     android:backgroundTint="@color/themeColor"
                     android:entries="@array/spinner"
-                    android:textAlignment="textStart"
+                    app:layout_constraintBaseline_toBaselineOf="@id/partsYearText"
                     app:layout_constraintBottom_toTopOf="@id/partsCategorySpinner"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/partsYearText"
@@ -195,7 +194,7 @@
                     android:layout_marginTop="25dp"
                     android:backgroundTint="@color/themeColor"
                     android:entries="@array/spinner"
-                    android:textAlignment="textStart"
+                    app:layout_constraintBaseline_toBaselineOf="@id/partsCategoryText"
                     app:layout_constraintBottom_toTopOf="@id/partsSubCategorySpinner"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/partsCategoryText"
@@ -221,7 +220,7 @@
                     android:layout_marginTop="25dp"
                     android:backgroundTint="@color/themeColor"
                     android:entries="@array/spinner"
-                    android:textAlignment="textStart"
+                    app:layout_constraintBaseline_toBaselineOf="@id/partsSubCategoryText"
                     app:layout_constraintBottom_toTopOf="@id/partsConditionSpinner"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/partsSubCategoryText"
@@ -248,7 +247,7 @@
                     android:layout_marginBottom="21dp"
                     android:backgroundTint="@color/themeColor"
                     android:entries="@array/spinner"
-                    android:textAlignment="textStart"
+                    app:layout_constraintBaseline_toBaselineOf="@id/partsConditionText"
                     app:layout_constraintBottom_toTopOf="@+id/partsNegotiable"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/partsConditionText"
