--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -23,14 +23,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <SearchView
+        <androidx.appcompat.widget.SearchView
             android:id="@+id/partsSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:iconifiedByDefault="false"
+            app:queryHint="@string/searchParts"
             android:focusable="true"
-            android:iconifiedByDefault="false"
-            android:queryHint="@string/searchParts"
-            android:searchIcon="@drawable/ic_search" />
+            app:searchIcon="@drawable/ic_search"/>
     </androidx.cardview.widget.CardView>
 
     <ImageView
@@ -271,6 +271,7 @@
                     android:layout_marginTop="@dimen/loginViewsMargin"
                     android:text="@string/nearest_location"
                     android:textSize="20sp"
+                    app:layout_constraintBaseline_toBaselineOf="@id/partsNegotiable"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/partsNegotiable"
                     app:layout_constraintTop_toBottomOf="@id/partsConditionText" />
