--- a/app/src/main/res/layout/activity_part_details.xml
+++ b/app/src/main/res/layout/activity_part_details.xml
@@ -425,7 +425,7 @@
                     android:id="@+id/location_part_click"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_gravity="bottom|right"
+                    android:layout_gravity="top|right"
                     android:layout_margin="10dp"
                     android:src="@drawable/expand_icon" />
             </androidx.cardview.widget.CardView>
